// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slate converts bold.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "bold",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts code.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "some code",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts codeblock.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "text": "this
is a
code block.
",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "end.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts commonmark.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Try CommonMark",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "You can try CommonMark here.  This dingus is powered by",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "https://github.com/jgm/commonmark.js",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " commonmark.js",
            },
          ],
          "title": "",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ", the JavaScript reference implementation.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item two",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts headings.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H1",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H2",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "3",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H3",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "end.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts html-block.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "text": "<foo>
this
is an
html block.
</foo>
end.",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts italic.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "italic",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts link.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "link",
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts ordered.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts paragraphs.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "one",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "two",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "three",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts plain.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "plain",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts quote.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.BlockQuote",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "this is a quote",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts text.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "plain ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "italic",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "bold",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "bold-italic",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "code",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts unordered.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.List",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "tight": "true",
      "type": "bullet",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;
